<resources>
    <string name="app_name">Personality Quote App.</string>
    <string name="splashText">Hello World, Splash</string>
    <string name="welcome_text">Welcome to the Personality Quote App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="coming_soon">Personality Quote Coming Soon</string>
    <string name="personality_select_text">Select your Favourite Personality</string>

    <!--Simple 4 Personality text-->
    <string name="personality_1_text">Batman</string>
    <string name="personality_2_text">BMW</string>
    <string name="personality_3_text">Cat</string>
    <string name="personality_4_text">Ninga Guy</string>

</resources>
