<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.MainMenuFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:text="@string/personality_select_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            >

            <ImageView
                android:id="@+id/personality1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/personality_1" />

            <ImageView
                android:id="@+id/personality2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:src="@drawable/personality_2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/personality_1_text"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/personality_2_text"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginLeft="125dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/personality3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/personality_3" />

            <ImageView
                android:id="@+id/personality4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:src="@drawable/personality_4" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/personality_3_text"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginLeft="60dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/personality_4_text"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginLeft="100dp"/>
        </LinearLayout>

    </LinearLayout>
